--- a/Front/src/components/grid.css
+++ b/Front/src/components/grid.css
@@ -31,6 +31,12 @@
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.grid-item:hover {
+  transform: scale(1.05); /* Aumenta un poco el tamaño */
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2); /* Sombra más pronunciada */
 }
 
 .grid-item img {
