perfil de ususario (use el mismo grid del dashboard pero pienso q deberia ser uno diferente para que tenga el boton de editar proyecto)

--- a/Front/src/components/header.css
+++ b/Front/src/components/header.css
@@ -9,6 +9,7 @@ body {
 }
 
 .header {
+    width: 100vw; /* Asegura que ocupa todo el ancho de la pantalla */
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -16,6 +17,7 @@ body {
     background: linear-gradient(to right, #f3e7fe, #ffe7fe);
     height: 70px;
 }
+
 
 .logo {
     color: #6366f1;
