--- a/Front/src/components/perfilheader.css
+++ b/Front/src/components/perfilheader.css
@@ -12,10 +12,11 @@ body {
 }
 
 .profile-container {
+    padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
+    gap: 1px;
 }
 
 .logo {
@@ -36,7 +37,7 @@ body {
     font-size: 16px;
     font-weight: 600;
     color: #000;
-    margin: 10px 0;
+    margin-bottom: 0; /* Eliminamos el espacio inferior */
 }
 
 .buttons-container {
@@ -66,4 +67,22 @@ body {
 
 .button:focus {
     outline: none;
+}
+
+.text-display {
+    margin-top: 10px; /* Espacio entre los botones y el texto */
+    font-size: 2.9rem; /* Tamaño de fuente */
+    font-weight: bold; /* Texto en negrita */
+    color: #000000; /* Color similar al tema */
+    text-align: center; /* Centrar el texto */
+    transition: opacity 0.3s ease-in-out; /* Suavizar la aparición del texto */
+}
+
+/* Animación para cuando cambia el texto */
+.text-display.fade-in {
+    opacity: 1;
+}
+
+.text-display.hidden {
+    opacity: 0;
 }
