--- a/Front/src/components/grid.css
+++ b/Front/src/components/grid.css
@@ -25,6 +25,7 @@
 }
 
 .grid-item {
+  position: relative;
   display: inline-block;
   width: 100%;
   margin-bottom: 15px;
@@ -44,4 +45,16 @@
   height: auto;
   display: block;
   border-radius: 10px;
+}
+
+.edit-button {
+  width: 30px;
+  height: 30px;
+  background-color: #b369b2;
+  border: none;
+  border-radius: 50%;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
 }
