--- a/Front/src/components/header.css
+++ b/Front/src/components/header.css
@@ -2,20 +2,28 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
 
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+    padding-top: 60px; /* Reserva espacio para el header */
+    margin: 0;
 }
 
 .header {
-    width: 100vw; /* Asegura que ocupa todo el ancho de la pantalla */
+    width: 100vw; 
     display: flex;
     align-items: center;
     justify-content: space-between;
+    top: 0;
+    left: 0;
     padding: 1rem 2rem;
     background: linear-gradient(to right, #f3e7fe, #ffe7fe);
     height: 70px;
+    z-index: 1000;  /* Se mantiene sobre otros elementos */
+    width: 100%;  /* Ocupa todo el ancho */
+    height: 60px;  /* Ajusta según lo necesites */
 }
 
 
