--- a/Front/src/components/perfilheader.css
+++ b/Front/src/components/perfilheader.css
@@ -45,7 +45,7 @@ body {
     gap: 10px;
 }
 
-.button {
+.perfil-button {
     width: 40px;
     height: 40px;
     border-radius: 8px;
@@ -60,12 +60,12 @@ body {
     transition: all 0.3s ease;
 }
 
-.button:hover, .button.active {
+.perfil-button:hover, .button.active {
     background-color: #E5DBFF;
     color: #4F378B;
 }
 
-.button:focus {
+.perfil-button:focus {
     outline: none;
 }
 
