--- a/Front/src/components/formulariopryct.css
+++ b/Front/src/components/formulariopryct.css
@@ -1,5 +1,7 @@
+* {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+}
         body {
-            font-family: Arial, sans-serif;
             background-color: #f5f0ff;
             margin: 0;
             padding: 0;
