--- a/Front/src/components/header.css
+++ b/Front/src/components/header.css
@@ -9,9 +9,11 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
     padding-top: 60px; /* Reserva espacio para el header */
     margin: 0;
+    padding: 0;
 }
 
 .header {
+
     width: 100vw; 
     display: flex;
     align-items: center;
@@ -26,7 +28,10 @@ body {
     height: 60px;  /* Ajusta según lo necesites */
 }
 
-
+.main-content {
+    margin-top: 80px; /* Ajusta el margen superior según la altura del header */
+    padding: 1rem;
+}
 .logo {
     color: #6366f1;
     font-size: 24px;
