--- a/Front/src/components/perfilheader.css
+++ b/Front/src/components/perfilheader.css
@@ -12,7 +12,7 @@ body {
 }
 
 .profile-container {
-    padding: 20px;
+    padding: 80px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -21,21 +21,25 @@ body {
 }
 
 .logo {
+    margin-top: 20px;
     width: 120px;
+    height: 120px; /* Añadido para hacer que el logo sea un círculo perfecto */
     overflow: hidden;
+    border-radius: 50%; /* Esto convierte el contenedor en un círculo */
 }
 
 .logo img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: cover; /* Asegura que la imagen cubra todo el área del círculo sin distorsionarse */
 }
 
 .username {
-    font-size: 16px;
-    font-weight: 600;
-    color: #000;
-    margin-bottom: 0; /* Eliminamos el espacio inferior */
+    font-size: 30px;
+    font-weight: 700;
+    color: #4F378B;;
+    
+    margin-bottom: 10px; /* Eliminamos el espacio inferior */
 }
 
 .buttons-container {
@@ -68,6 +72,7 @@ body {
 }
 
 .text-display {
+    margin-bottom: -90px;
     margin-top: 10px; /* Espacio entre los botones y el texto */
     font-size: 2.9rem; /* Tamaño de fuente */
     font-weight: bold; /* Texto en negrita */
