--- a/Front/src/pages/addcontentpryct.css
+++ b/Front/src/pages/addcontentpryct.css
@@ -250,7 +250,13 @@
     max-width: 100%;
     object-fit: contain;
 }
+.addcontentpryct-main-video {
+    height: auto;
+    border-radius: 10px;
+    justify-content: center;
 
+
+}
 /* Contenedor de texto */
 .addcontentpryct-text-container {
     width: 100%;
@@ -281,4 +287,5 @@
     background-color: #f5f5f7;
     box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.1);
 }
+
 
